# orbit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PLAYBOOK.md  README.md  SECURITY.md  STATUS.md  THIRD_PARTY_NOTICES.md  machines.json  multi-agent-collaboration-design.md  pyproject.toml  synth_config.json
.evomesh/: project.yaml
docker/: entrypoint.sh  requirements-exec.txt
docs/: README.md  affine-system.md  affine_swarm_vg_sopd_three_layer_architecture.md  architecture-report.md  architecture-zh.md  architecture.md  cli.md  data_strategy.md  debugging.md  game-generators.md  getting-started.md  liveweb-design-suggestions.md  logging-and-artifacts.md  muzero-training-history.md  nvml-gpu-audit.md  official-examples.md  offline-gkd-quickstart.md  offline-gkd.md  operations.md  pydantic-validation.md  refactoring-plan.md  scoring-strategy.md  swe-collection-system.md  swe-synthesis-pipeline-zh.md  swe-synthesis-pipeline.md  targon-automation.md  test-runbook.md  testing.md  usage-examples.md  user-guide.md  work-report.md
eval/: README.md
examples/: vg_sopd_minimal.yaml
execution_templates/: local-docker.yaml  local-host.yaml  targon-rental-docker.yaml  targon-rental-host.yaml
experiments/: results.tsv  v1-baseline.yaml  v1.yaml  v2-enhanced-data.yaml  v2-swe-synth-seq8192.yaml  v2.1-data-quality.yaml  v2.10-navworld-v5.yaml  v2.11-more-data.yaml  v2.12-draft.yaml  v2.13-draft.yaml  v2.14-draft.yaml  v2.15-draft.yaml  v2.16-draft.yaml  v2.17-ab.yaml  v2.18.yaml  v2.19-draft.yaml  v2.19.yaml  v2.2-navworld-quality.yaml  v2.20.yaml  v2.21.yaml  v2.22.yaml  v2.23.yaml  v2.24.yaml  v2.25-draft.yaml  v2.25.yaml  v2.26.yaml  v2.27.yaml  v2.28.yaml  v2.3-draft.yaml  v2.3-game-quality.yaml  v2.4-navworld-gpt5.yaml  v2.4b-seq16384.yaml  v2.5-more-navworld.yaml  v2.6-best-config.yaml  v2.7-optimized.yaml  v2.8-lr-tuned.yaml  v2.9-game-cleaned.yaml
forge/: __init__.py  __main__.py  cli.py  cli_control.py  cli_data.py  cli_eval.py  cli_exp.py  cli_game.py  cli_remote.py  cli_rental.py  cli_train.py  cli_worker.py  config.py  deploy.py
knowledge/: README.md  audit_report.md  breakthrough_analysis.md  data.md  data_quality_deep_analysis.md  eval_zero_score_analysis.md  failures.md  full_ft_setup.md  game_data_strategy.md  gap_analysis.md  global_breakthrough_strategy.md  infra.md  liveweb_fundamental_fixes.md  liveweb_teacher_bot_bugs.md  liveweb_teacher_improvements.md  msswift_tool_calls_bug.md  navworld_claude_scoring.md  scoring.md  swe_infinite_distillation.md  training.md  training_best_practices.md  training_storage_design.md  v228_data_filter_analysis.md  v228_data_filter_analysis_v2.md  v228_eval_analysis.md
logs/: data_synth_log.md  iteration_log.md
memory/: short-term.md
orbit/: __init__.py  __main__.py  cli.py  cli_control.py  cli_data.py  cli_worker.py  config.py  deploy.py
projects/: __init__.py
projects/openspiel_muzero_pt/: README.md  __init__.py  config_utils.py  pyproject.toml  requirements.txt
projects/openspiel_muzero_pt/configs/: clobber5_h200_v2.yaml  clobber5_h200_v4.yaml  clobber5_h200_v5.yaml  clobber5_h200_v7.yaml  clobber5_h200x2_concurrent.yaml  clobber_5.yaml  clobber_6.yaml  clobber_7.yaml  hex5_h200x2_concurrent.yaml  hex_11.yaml  hex_5.yaml  hex_7.yaml  hex_9.yaml  othello_8x8.yaml  othello_8x8_h200_longrun.yaml  othello_8x8_h200_probe.yaml  othello_8x8_smoke.yaml  othello_h200_v2.yaml  othello_h200_v4.yaml  othello_h200_v5.yaml  othello_h200_v7.yaml  othello_h200x2_online.yaml
projects/openspiel_muzero_pt/docs/: README.md  adding_games.md  architecture.md  bug-analysis-and-fix-recommendations.md  development.md  game-selfplay-local-run.md  othello-convergence-diagnostics.md  running.md
projects/openspiel_muzero_pt/games/: __init__.py  action_codecs.py  adapters.py  affine_registry.py  encoders.py  game_spec.py
projects/openspiel_muzero_pt/model/: __init__.py  board_muzero.py
projects/openspiel_muzero_pt/pipelines/: __init__.py  build_state_corpus.py  diagnose_convergence.py  evaluate_vs_affine_mcts.py  label_with_mcts.py  learner.py  selfplay_actor.py  train_online.py  warmstart.py
projects/openspiel_muzero_pt/replay/: __init__.py  expert_buffer.py  ring_buffer.py
projects/openspiel_muzero_pt/runtime/: __init__.py  gpu_coordinator.py  inference.py  settings.py  shared_memory.py
projects/openspiel_muzero_pt/scripts/: collect_v11.sh  convert_mcts_win_samples_to_game_jsonl.py  deploy_v11.sh  export_model_vs_mcts_wins.py  export_model_vs_mcts_wins_orchestrator.py  export_selfplay_from_checkpoint.py  game_longrun_job.py  rental_prepare_policy_env.sh  rental_run_long_job.sh  rental_run_policy_sample_smoke.sh  rental_run_policy_train.sh  rental_run_selfplay_eval.sh  rental_run_selfplay_train.sh  rental_sync_policy_code.sh  targon_game_selfplay_longrun.py  targon_game_smoke.py  targon_muzero_othello.sh
projects/openspiel_muzero_pt/search/: __init__.py  batched_search.py  gumbel_root.py  puct.py  tree.py
projects/openspiel_muzero_pt/tests/: test_action_codecs.py  test_configs.py  test_eval_modes.py  test_game_encoders.py  test_gumbel_root.py  test_model.py  test_online_convergence.py  test_online_replay.py  test_runtime_settings.py  test_runtime_shared_memory.py  test_search_smoke.py  test_selfplay_actor.py  test_training_diagnostics.py
projects/openspiel_muzero_pt/utils/: __init__.py  progress.py
prompts/: data_synth.md  loop_main.md  strategist.md
release/: public-export.yaml
scripts/: apply_ms_swift_patches.py  build_ms_swift_canonical_dataset.py  build_v8_dataset.py  check_logs.py  collect_offline_topk_dataset.py  convert_openai_to_msswift.py  eval_envs.py  export_public.py  filter_ms_swift_dataset_by_length.py  game_bot_gen.py  game_bots.py  game_data_clean.py  game_distill.py  game_gen.py  game_strategy_inject.py  game_think_fix.py  game_think_regen.py  game_think_rewrite.py  liveweb_bot_gen.py  liveweb_cached_gen.py  liveweb_cached_task_ids.json  liveweb_claude_distill.py  liveweb_env_patched.py  liveweb_gen.py  (+44 more)
(+967 files in other folders)
