[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affine-forge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8,<9",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
control = ["affine-forge-control-plugin"]
exec = ["affine-forge-exec-plugin"]
all = ["affine-forge-control-plugin", "affine-forge-exec-plugin"]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.uv.workspace]
members = ["packages/control-plugin", "packages/exec-plugin"]

[tool.uv.sources]
affine-forge-control-plugin = { workspace = true }
affine-forge-exec-plugin = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F"]
ignore = [
    "F401",   # unused import (many conditional imports)
    "F541",   # f-string without placeholders (legacy code)
    "F601",   # multi-value repeated key (legacy)
    "F811",   # redefined while unused (legacy)
    "F841",   # unused variable (common in scripts)
]

[tool.ruff.lint.isort]
known-first-party = ["forge"]
