[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affine-forge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8,<9",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
# Control plane: API clients, monitoring, orchestration
control = [
    "aiohttp>=3,<4",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<1",
    "huggingface_hub>=0.26,<1",
    "nest-asyncio>=1.6,<2",
    "openai>=1.54,<2",
]
# Execution plane: ML training, inference, data processing
# NOTE: torch/torchvision/torchaudio must be installed separately from the CUDA
# index BEFORE installing this extra:
#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
#   pip install -e ".[exec]"
exec = [
    "transformers==4.51.3",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.45.0",
    "ms-swift>=4.0.0",
    "deepspeed>=0.15.0",
    "huggingface_hub>=0.26,<1",
    "wandb>=0.18.0",
    "httpx>=0.27,<1",
    "openai>=1.54,<2",
    "anthropic>=0.40,<1",
    "nest-asyncio>=1.6,<2",
    "docker",
]
# Everything (for development or full single-machine install)
all = [
    "affine-forge[control,exec]",
]

[project.scripts]
forge = "forge.cli:main"

[project.entry-points."affine_forge.cli_commands"]
control = "forge.cli_control:control"
data = "forge.cli_data:data"
monitor = "forge.monitoring.cli:monitor"
remote = "forge.remote_ops.cli:remote"
worker = "forge.cli_worker:worker"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
forge = ["setup/*", "training/templates/*", "prompt/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F"]
ignore = [
    "F401",   # unused import (many conditional imports)
    "F541",   # f-string without placeholders (legacy code)
    "F601",   # multi-value repeated key (legacy)
    "F811",   # redefined while unused (legacy)
    "F841",   # unused variable (common in scripts)
]

[tool.ruff.lint.isort]
known-first-party = ["forge"]
