[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.1.0"
description = "Control-plane and execution-plane workspace for remote training, evaluation, and collection."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["llm", "training", "evaluation", "targon", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8,<9",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
# Control plane: API clients, monitoring, orchestration
control = [
    "aiohttp>=3,<4",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<1",
    "huggingface_hub>=0.26,<1",
    "nest-asyncio>=1.6,<2",
    "openai>=2,<3",
]
# Execution plane: ML training, inference, data processing
# NOTE: torch/torchvision/torchaudio must be installed separately from the CUDA
# index BEFORE installing this extra:
#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
#   pip install -e ".[exec]"
exec = [
    "transformers>=4.57.6,<4.58",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.11,<0.19",
    "trl>=0.15,<0.30",
    "bitsandbytes>=0.45.0",
    "deepspeed>=0.15.0",
    "vllm==0.19.0",
    "huggingface_hub>=0.26,<1",
    "wandb>=0.18.0",
    "httpx>=0.27,<1",
    "openai>=2,<3",
    "anthropic>=0.40,<1",
    "nest-asyncio>=1.6,<2",
    "docker",
    "nvidia-ml-py>=12,<13",
]
# Everything (for development or full single-machine install)
all = [
    "orbit[control,exec]",
]

[project.scripts]
orbit = "orbit.cli:main"

[project.urls]
Homepage = "https://github.com/wangtong10086/orbit"
Documentation = "https://github.com/wangtong10086/orbit/tree/main/docs"
Source = "https://github.com/wangtong10086/orbit"
Issues = "https://github.com/wangtong10086/orbit/issues"

[project.entry-points."orbit.cli_commands"]
control = "orbit.cli_control:control"
data = "orbit.cli_data:data"
monitor = "orbit.monitoring.cli:monitor"
remote = "orbit.remote_ops.cli:remote"
worker = "orbit.cli_worker:worker"

[tool.setuptools.packages.find]
include = ["orbit*"]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.package-data]
orbit = ["setup/*", "training/templates/*", "prompt/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F"]
ignore = [
    "F401",   # unused import (many conditional imports)
    "F541",   # f-string without placeholders (legacy code)
    "F601",   # multi-value repeated key (legacy)
    "F811",   # redefined while unused (legacy)
    "F841",   # unused variable (common in scripts)
]

[tool.ruff.lint.isort]
known-first-party = ["orbit"]
