[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspiel-muzero-pt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "PyYAML>=6.0",
    "torch>=2.4",
    "open_spiel>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
